syntax = "proto3";

option csharp_namespace = "Example";

import "google/protobuf/timestamp.proto";

package example;

// The greeting service definition.
service Example {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc GetStats(GetStatsRequest) returns (GetStatsResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloResponse {
  string message = 1;
}

// The request message containing search options for stats
message GetStatsRequest {}

// The response message containing the greeting data
message GetStatsResponse {
    repeated GreetingStat Greetings = 1;
}

// The message containing statistic data
message GreetingStat {
    string name = 1;
    google.protobuf.Timestamp sent = 2;
}
